# django-polls

./: Dockerfile  docker-compose.yml  requirements.txt  setup.cfg  wait-for-it.sh
.github/workflows/: python-ci.yml
mysite/: settings.py
polls/: tests.py
