[metadata]
name = django-polls
version = 1.0.0

[options]
packages = find:

[flake8]
max-line-length = 120

[pylint]
load-plugins = pylint_django
django-settings-module = django_polls.settings
max-line-length = 120

[ruff]
line-length = 120
ignore = [
    "E501",  # line too long (on gère nous-même)
    "E402",  # module import not at top of file (souvent normal dans Django)
    "F401",  # unused imports (pylint s'en charge mieux)
    "F841",  # unused variables (plus tolérant en dev Django)
]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
]
